# pico_sign_sipf_xmodem

./: .gitmodules  README.ja.md  README.md
pcb/breadboard/: Makefile  breadboard.kicad_pro  breadboard.kicad_sch  fp-lib-table  sym-lib-table
pcb/custom_lib/: custom_lib.kicad_sym
sw/: CMakeLists.txt
sw/app/: CMakeLists.txt  main.c
web/: .gitignore  Dockerfile  Makefile  Pipfile  README.md  gen_secret_key.py  manage.py  pico_sign_web.service
web/docker/: default.conf  entrypoint.sh  nginx.conf
web/pico_sign_web/: .gitignore  asgi.py  settings.py  settings_sacloud.py.template  urls.py  views.py  wsgi.py
web/pico_sign_web/settings/: .gitignore  base.py  monopla.py.template  settings_edb.py.template  settings_local.py
web/pico_sign_web/templates/: base.html  done.html  error.html  index.html  login.html  logout.html  navbar.html
web/signboard/: asgi.py  settings.py  urls.py  views.py  wsgi.py
web/signboard/templates/: custom.html  index.html  preset.html
